# dbbs-solutions

./: .eslintrc.json  .gitignore  .prettierrc.json  .tool-versions  LICENSE  Makefile  README.md  README.template.md  download.env.sh  package-lock.json  package.json  sonar-project.properties  tsconfig.json  turbo.json
.github/: CODEOWNERS  change_path_filter.yaml  change_path_filter_nodejs.yaml  change_path_filter_python.yaml  pull_request_template.md
.github/actions/build-and-e2e/: action.yml
.github/actions/build-and-e2e-android/: action.yml
.github/actions/build-and-e2e-ios/: action.yml
.github/actions/build-and-tests/: action.yml
.github/actions/install-mobile-dependencies/: action.yml
.github/actions/release-version/: action.yml
.github/actions/setup-flutter/: action.yml
.github/actions/setup-python/: action.yml
.github/actions/setup-yarn/: action.yml
.github/workflows/: auto-run-e2e-mobile.yml  auto-run-test-jobs.yml  auto-run-test-main.yml  auto_run_test_jobs.yml  manual-e2e-mobile.yml  nodejs-cache.yaml  nodejs-test.yaml  python-test.yaml  test_dart.yml  test_python.yml  test_typescript.yml
.husky/: pre-commit
Docker/: yarn.Dockerfile
apps/django-server/: package.json  pyproject.toml
apps/django-server/core/: urls.py
apps/django-server/core/settings/: base.py  prod.py
apps/django-server/example_module/: tests.py
apps/mobile-app/: .env.example  AppEntryPoint.tsx  Gemfile  Makefile  README.md  index.js  jest.config.ts  metro.config.cjs  package.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
apps/mobile-app/android/: build.gradle  settings.gradle
apps/mobile-app/fastlane/: .env.example  Appfile  Fastfile  Matchfile  README.md  notify.sh
apps/mobile-app/ios/: Podfile
apps/mobile-expo-app/: .detoxrc.cjs  .env.example  app.config.ts  jest.config.ts  metro.config.js  package.json  prebuild-cleanup.sh  tsconfig.app.json
apps/mobile-expo-app/.ondevice/: main.ts  preview.tsx
apps/mobile-expo-app/android/: build.gradle  gradle.properties  settings.gradle
apps/mobile-expo-app/eas_hooks/: eas-build-post-install.sh
apps/mobile-expo-app/fastlane/: Appfile  Fastfile  README.md
apps/mobile-expo-app/ios/: Podfile
apps/server-api/: .env.example  Procfile  README.md  jest.config.ts  package.json  tsconfig.json
apps/server-api/src/: app.module.ts  cluster.ts  logger.config.ts
apps/server-api/test/: app.e2e-spec.ts
apps/serverless-api/: .env.example  README.md  package.json  serverless.yml  tsconfig.json  tsconfig.spec.json
apps/serverless-api-cqrs/: Readme.md  package.json  serverless.yml  tsconfig.json
apps/serverless-api-cqrs/src/: lambda.ts
apps/serverless-api/src/: app.module.ts  asyncContextStorage.ts  constants.ts  lambda.ts  logger.config.ts  main.ts
apps/serverless-settings-service/: README.md  package.json  serverless.yml  tsconfig.json
apps/strapi/: .env.example  README.md  package.json  tsconfig.json
apps/strapi/config/: admin.ts  database.ts  (+3 more)
apps/web-spa/: .env.example  README.md  cypress.config.ts  jest.config.ts  package.json  tsconfig.json  vite.config.ts
apps/web-ssr/: .env.example  README.md  jest.config.ts  next.config.js  package.json  sentry.edge.config.ts  sst.config.ts
dart/: .tool-versions  Makefile
docker-compose/: docker-compose.localstack.yml
docs/: developer-guideline.md  edd-template.md  modules-code-guideline.md  modules-integration.md
documentation/: README.md
python/: Makefile
python/apps/admin-panel-back-end/: alembic.ini  package.json  pyproject.toml
python/apps/admin-panel-back-end/src/: application.py  settings.py  utils.py
python/apps/admin-panel-back-end/src/api/: router.py
python/apps/admin-panel-back-end/src/api/base/: __init__.py  service.py
python/apps/admin-panel-back-end/src/api/geo/: __init__.py  schema.py  service.py  views.py
python/apps/admin-panel-back-end/src/api/meeting_type/: __init__.py  schema.py  service.py  views.py
python/apps/admin-panel-back-end/src/api/product/: __init__.py  schema.py  service.py  views.py
python/apps/admin-panel-back-end/src/api/type/: __init__.py  schema.py  service.py  views.py
python/apps/admin-panel-back-end/src/db/: base.py  utils.py
python/apps/admin-panel-back-end/src/db/migrations/: env.py  script.py.mako
python/apps/admin-panel-back-end/src/db/migrations/versions/: 2025-02-26-12-35_aa0e6c962a4e.py  2025-02-26-12-49_f26d942516d5.py  2025-05-22-15-42_138bffbe531c.py
python/apps/admin-panel-back-end/src/db/models/: __init__.py  geo.py  meeting_type.py  product.py  type.py
python/apps/django-server/: .env.example  README.md  package.json  pyproject.toml
python/apps/django-server/core/settings/: base.py  dev.py  local.py
python/apps/django-server/example_module/: admin.py  apps.py  serializers.py  urls.py  views.py
python/apps/django-server/example_module/migrations/: 0001_initial.py
python/apps/fast-api-server/: .env.example  README.md  package.json  pyproject.toml
python/apps/fast-api-server/src/: __init__.py  __main__.py  application.py  gunicorn_runner.py  lifespan.py  settings.py
python/apps/fast-api-server/src/api/: __init__.py  router.py
python/apps/fast-api-server/src/api/example/: __init__.py  schema.py  service.py  views.py
python/apps/fast-api-server/tests/: __init__.py  conftest.py  test_example.py
python/apps/flask-server/: .env.example  README.md  package.json  pyproject.toml
python/apps/flask-server/src/: __main__.py  app.py  config.py
python/apps/flask-server/src/api/: __init__.py
python/apps/flask-server/src/api/example/: __init__.py  routes.py  schema.py
python/apps/flask-server/tests/: conftest.py  test_example.py
scripts/: app-folders.conf  download.env.sh  env-constants.sh  flutter-mobile-env.sh  upload-env.sh  upload-settings.sh
turbo/generators/: config.ts  hbsHelpers.ts  types.ts
typescript/: .tool-versions  Makefile
(+922 files in other folders)
