[tool.poetry]
name = "flask-server"
version = "0.1.0"
description = "Simple Flask application"
authors = [
    "Hryhoriy Bilenko <hryhoriy.bilenko@dbbsoftware.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
flask = "3.1.0"
marshmallow = "3.23.1"
flask-marshmallow = "1.2.1"
pytest = "8.3.2"
ruff = "0.5.2"
coverage = "7.6.0"
common = {path = "../../packages/common"}
pydantic-settings = "2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
